Fix mini chart alignment

--- a/assets/dev/sass/pages/admin.scss
+++ b/assets/dev/sass/pages/admin.scss
@@ -67,7 +67,6 @@
 
 .column-wp-statistics-post-hits ,.column-wp-statistics-tax-hits{
   width: 12%;
-  text-align: center;
 
   .wps-column__chart{
     span{
